environments/modules/aurora_rds/vpc.tf
resource "aws_vpc" "aws-vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "My-Vpc"
  }
}
